# MetaTrader

./: Order Closing Tool (MT4).ex4  Order Closing Tool (MT4).mq4  stdlib.mqh
MetaTrader 4/: Order Closing Tool (MT4).ex4  Order Closing Tool (MT4).mq4
MetaTrader 5/: Order Closing Tool v1 (MT5).ex5  Order Closing Tool v1 (MT5).mq5
dlls/: .gitignore  README.md  Volatility.md
dlls/DatabaseIntergrations/: README.md  postgresdb.cpp  postgresdb.cs  sqlitedb.cpp  sqlitedb.cs
dlls/VolatilityAnalysisExample/: MainVolatilityCalculator.cpp  README.md  VolatilityCalculatorLM.cpp  examplescript.mq4
dlls/api/: auth.cpp
dlls/cpptest/: cpptest.cpp
dlls/python/: CMakeLists.txt  README.md  priceplotdll.py  priceplotdllmod.py  priceplotwrapper.cpp
